	- fix note end detection in IT sample mode
	- fix IT envelope handling with carry and fadeout
	- fix IT tone portamento with sample changes
	- fix IT initial global volume setting
	- fix IT keyoff with instrument in old effects mode
	Other changes:
	- fix IT random volume variation
	- fix pattern initialization sanity check
	- fix ++ pattern handling in IT loader (reported by honguito98)

4.3.6 (20150322):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT volume column volume slide effect memory
	- fix IT default filter cutoff on new note
	- fix IT filter envelope memory
	Fix crashes with fuzzed files (reported by Lionel Debroux):
	- add sanity check to MED2/3/4 loader
	- add sanity check to STIM/GDM/DBM/LIQ/ICE/PSM/PTM/MGT loader
	- add sanity check to MDL/RAD/MGT/IMF/RTM/DT/LIQ/DTM pattern loader
	- add sanity check to OKT/IMF/MMD/MDL sample loader
	- add sanity check to Archimedes Tracker format test
	- add sanity check to Digital Symphony track loader
	- add sanity checks to SQSH, bzip2, arc, lha, lzx and S404 depackers
	- add sanity check for AMD/STX number of patterns
	- add sanity check for DSYM/MMD1/MMD3 number of channels
	- add sanity check for MMD1/MMD3 instrument type
	- add sanity check for IT old instrument loading
	- add sanity checks and fix memory leaks in the Vorbis decoder
	Other changes:
	- fix instrument number in channel initialization
	- fix sample size limit (reported by Jochen Goernitz)
	- fix loading of OpenMPT 1.17 IT modules (reported by Dane Bush)
	- fix sample number limit (reported by Lionel Debroux)
	- fix Oktalyzer split channel replay (reported by Dennis Lindroos)
	- fix Oktalyzer sample loop (by Dennis Lindroos)
	- fix Oktalyzer note slide up/down effect
	- fix ThePlayer pattern decoding
	- fix XM loading for MED2XM modules (reported by Lorence Lombardo)
	- add support to Amiga split channel loop and volume setting
	- add IT random volume variation
	- add IT random pan variation

4.3.5 (20150207):