@@ -13,6 +13,7 @@ Stable versions
 	- fix IT random volume variation
 	- fix pattern initialization sanity check
 	- fix ++ pattern handling in IT loader (reported by honguito98)
+	- fix Soundtracker short rip loading (reported by Shlomi Fish)
 
 4.3.6 (20150322):
 	Fix bugs caught in the OpenMPT test cases:
